<resources>
    <string name="app_name">DonationX</string>
    <string name="donateTitle">Welcome Homer</string>
    <string name="donateSubtitle">Please Give Generously</string>
    <string name="donateButton">Donate</string>
    <string name="paypal">PayPal</string>
    <string name="direct">Direct</string>
    <string name="amount">Amount</string>
    <string name="total">Total so Far</string>
    <string name="totalSoFar">$ Total</string>
    <string name="reportTitle">Donations Report</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="enter_amount">Enter Amount</string>

    <!-- menu res -->
    <string name="action_donate">Donate</string>
    <string name="action_report">Report</string>

    <!-- Nav Drawer Support -->
    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="group_communicate">Communicate</string>

    <!-- Nav Drawer About -->
    <string name="action_about">About Us</string>
    <string name="aboutus_title">Homer for President !!</string>
    <string name="aboutus_message">Hi, I\'m Homer\n\nPlease vote for me.\n\n Please Please Please Please!!</string>

    <string name="nav_header_title">DonationX </string>
    <string name="nav_header_subtitle">voteforhomer@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!--    MVVM implementation-->
    <string name="donationsNotFound">No Donations Yet...\nGo Make a Donation!</string>
    <string name="donationError">Error : Couldn\'t Make a Donation...</string>

    <!--    Donation Details-->
    <string name="donationDetails">Donation Details</string>
    <string name="amt">Amount :</string>
    <string name="payment">Payment :</string>
    <string name="message">Message :</string>
    <string name="upvotes">UpVotes :</string>

    <!--  api  -->
    <string name="messageLoading">Please Wait while the Donations are Loading...</string>

</resources>